--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <version>${mysql.version}</version>
         </dependency>
 
+        <!-- SQLite JDBC Driver (for testing) -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.44.1.0</version>
+        </dependency>
+
         <!-- HikariCP Connection Pool -->
         <dependency>
             <groupId>com.zaxxer</groupId>
