--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.paper'
 version = '0.0.1-SNAPSHOT'
-description = 'Demo project for Spring Boot'
+description = '学术论文管理系统 - Paper Management System'
 
 java {
 	toolchain {
