--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.sun.activation:jakarta.activation:2.0.1'
 	// 添加 MySQL 驱动依赖
     runtimeOnly 'mysql:mysql-connector-java:8.0.30'
+    // 添加 SQLite 驱动依赖（测试用）
+    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     
