--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 HELP.md
-.gradle
+
+### Gradle ###
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -18,7 +20,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -35,3 +37,45 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### OS Generated ###
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+### Logs ###
+*.log
+logs/
+
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+hs_err_pid*
+
+### Package Files ###
+*.zip
+*.tar.gz
+*.rar
+
+### Temporary Files ###
+*.tmp
+*.temp
+*.swp
+*~
+
+### Python cache (for python scripts in resources) ###
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+*.pyo
+
+.env
+*.db
