--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,33 @@
-# ============================================
-# 环境配置文件示例
+# ====== PaperMaster 环境配置 ======
 # 复制此文件为 .env 并填写实际值
-# ============================================
 
-# ============ 数据库配置 ============
-# 数据库模式: sqlite (测试) 或 mysql (生产)
+# ====== 数据库配置 ======
+# 模式: sqlite (开发测试) 或 mysql (生产环境)
 DB_MODE=sqlite
 
-# MySQL 数据库配置 (仅在 DB_MODE=mysql 时需要)
+# MySQL 配置 (仅 DB_MODE=mysql 时需要)
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=paper_sys
 MYSQL_USER=root
-MYSQL_PASSWORD=your_mysql_password
+MYSQL_PASSWORD=your_password
 
-# ============ 邮件服务配置 ============
-# QQ邮箱SMTP配置 (用于发送验证码)
+# ====== 邮件服务 (可选) ======
 MAIL_ENABLED=false
 MAIL_HOST=smtp.qq.com
 MAIL_PORT=465
 MAIL_USERNAME=your_email@qq.com
-MAIL_PASSWORD=your_qq_mail_authorization_code
+MAIL_PASSWORD=your_authorization_code
 
-# ============ AI 助手配置 ============
-# AI 服务提供商: openai, gemini, claude, deepseek, ollama
-AI_PROVIDER=openai
-
-# OpenAI 配置
-OPENAI_API_KEY=sk-your-openai-api-key
-OPENAI_API_BASE=https://api.openai.com/v1
-OPENAI_MODEL=gpt-3.5-turbo
-
-# Google Gemini 配置
-GEMINI_API_KEY=your-gemini-api-key
-GEMINI_MODEL=gemini-pro
-
-# Anthropic Claude 配置
-CLAUDE_API_KEY=your-claude-api-key
-CLAUDE_MODEL=claude-3-sonnet-20240229
-
-# DeepSeek 配置
-DEEPSEEK_API_KEY=your-deepseek-api-key
+# ====== AI 服务 ======
+AI_PROVIDER=deepseek
+DEEPSEEK_API_KEY=your-api-key
 DEEPSEEK_API_BASE=https://api.deepseek.com/v1
 DEEPSEEK_MODEL=deepseek-chat
 
-# Ollama 本地配置
-OLLAMA_API_BASE=http://localhost:11434
-OLLAMA_MODEL=llama2
-
-# ============ 服务器配置 ============
+# ====== 服务器配置 ======
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
 
-# ============ 安全配置 ============
-# JWT 密钥 (用于用户认证)
-JWT_SECRET=your-jwt-secret-key-at-least-32-characters
-JWT_EXPIRATION=86400
-
-# ============ 日志配置 ============
+# ====== 日志级别 ======
 LOG_LEVEL=INFO
