--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.application.name=project
+# ====== PaperMaster 应用配置 ======
+spring.application.name=paper-master
+
+# 服务器配置
 server.address=0.0.0.0
 server.port=8080
+
+# 文件上传配置
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
