--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ java {
 	}
 }
 
+// 设置编码为 UTF-8
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = 'UTF-8'
+}
+
+tasks.withType(Javadoc).configureEach {
+	options.encoding = 'UTF-8'
+}
+
 repositories {
 	maven { url 'https://maven.aliyun.com/repository/public' }
     maven { url 'https://maven.aliyun.com/repository/central' }
