--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.application.name=paper-master
 server.address=0.0.0.0
 server.port=8080
 
+# 编码配置 - 解决中文乱码
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+spring.mandatory-file-encoding=UTF-8
+
 # 文件上传配置
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB 
