--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,28 @@ spring.mandatory-file-encoding=UTF-8
 
 # 文件上传配置
 spring.servlet.multipart.max-file-size=1000MB
-spring.servlet.multipart.max-request-size=1000MB 
+spring.servlet.multipart.max-request-size=1000MB
+
+# ====== 期刊数据库配置 (Journal Metrics) ======
+# 期刊指标数据库连接
+journal.datasource.url=jdbc:mysql://127.0.0.1:3306/paper_db?characterEncoding=utf8mb4&useSSL=false&serverTimezone=UTC
+journal.datasource.username=root
+journal.datasource.password=
+journal.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA配置
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# ====== AI服务配置 (DeepSeek/OpenAI Compatible) ======
+# AI API配置
+ai.api.base-url=https://api.deepseek.com/v3
+ai.api.key=
+ai.api.model=deepseek-chat
+ai.api.timeout=60
+
+# AI提示词文件路径
+ai.prompt.journal-detail=classpath:prompts/journal_detail_system.txt
+ai.prompt.recommend-match=classpath:prompts/recommend_match_system.txt 
