--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,26 +15,47 @@ spring.mandatory-file-encoding=UTF-8
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
 
+# ====== 数据库配置 ======
+# MySQL主数据源（用户、论文等业务数据）
+spring.datasource.url=jdbc:sqlite:paper.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
 # ====== 期刊数据库配置 (Journal Metrics) ======
-# 期刊指标数据库连接
+# 期刊指标数据库连接（独立数据源）
+# 修改以下配置以连接到你的MySQL数据库
 journal.datasource.url=jdbc:mysql://127.0.0.1:3306/paper_db?characterEncoding=utf8mb4&useSSL=false&serverTimezone=UTC
 journal.datasource.username=root
 journal.datasource.password=
 journal.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA配置
+# JPA/Hibernate配置
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # ====== AI服务配置 (DeepSeek/OpenAI Compatible) ======
 # AI API配置
+# 如果不需要AI功能，可以留空，系统会自动禁用AI相关功能
 ai.api.base-url=https://api.deepseek.com/v3
 ai.api.key=
 ai.api.model=deepseek-chat
 ai.api.timeout=60
 
-# AI提示词文件路径
+# AI提示词文件路径（不需要修改）
 ai.prompt.journal-detail=classpath:prompts/journal_detail_system.txt
-ai.prompt.recommend-match=classpath:prompts/recommend_match_system.txt 
+ai.prompt.recommend-match=classpath:prompts/recommend_match_system.txt
+
+# ====== 日志配置 ======
+# 开发环境显示详细日志，生产环境设为WARN
+logging.level.root=INFO
+logging.level.com.paper=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ====== 开发工具配置 ======
+# 开启开发者工具（热部署）
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
