--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,22 +16,14 @@ spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
 
 # ====== 数据库配置 ======
-# MySQL主数据源（用户、论文等业务数据）
+# 统一使用SQLite数据库
 spring.datasource.url=jdbc:sqlite:paper.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-
-# ====== 期刊数据库配置 (Journal Metrics) ======
-# 期刊指标数据库连接（独立数据源）
-# 修改以下配置以连接到你的MySQL数据库
-journal.datasource.url=jdbc:mysql://127.0.0.1:3306/paper_db?characterEncoding=utf8mb4&useSSL=false&serverTimezone=UTC
-journal.datasource.username=root
-journal.datasource.password=
-journal.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate配置
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
