--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,2 @@
-# ====== PaperMaster 环境配置 ======
-# 复制此文件为 .env 并填写实际值
-
-# ====== 数据库配置 ======
-# 模式: sqlite (开发测试) 或 mysql (生产环境)
-DB_MODE=sqlite
-
-# ====== AI 服务 ======
-AI_PROVIDER=deepseek
-DEEPSEEK_API_KEY=your-api-key
-DEEPSEEK_API_BASE=https://api.deepseek.com/v1
-DEEPSEEK_MODEL=deepseek-chat
-
-# ====== 服务器配置 ======
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8080
-
-# ====== 日志级别 ======
-LOG_LEVEL=INFO
+# PaperMaster 环境变量配置
+AI_API_KEY=sk-your-api-key-here
